Project

General

Profile

Actions

Bug #46928

closed

rbd_write_zeroes()

Added by Corey Bryant over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Local build of nautilus 14.2.11 is failing due to:

/<<PKGBUILDDIR>>/src/librbd/librbd.cc: In function ‘ssize_t rbd_write_zeroes(rbd_image_t, uint64_t, size_t, int, int)’:
/<<PKGBUILDDIR>>/src/librbd/librbd.cc:5258:20: error: conflicting declaration of C function ‘ssize_t rbd_write_zeroes(rbd_image_t, uint64_t, size_t, int, int)’
extern "C" ssize_t rbd_write_zeroes(rbd_image_t image, uint64_t ofs, size_t len,
^~~~~~~~~~~~~~
In file included from /<<PKGBUILDDIR>>/src/include/rbd/librbd.hpp:24:0,
from /<<PKGBUILDDIR>>/src/librbd/ImageCtx.h:23,
from /<<PKGBUILDDIR>>/src/librbd/librbd.cc:25:
/<<PKGBUILDDIR>>/src/include/rbd/librbd.h:981:22: note: previous declaration ‘ssize_t rbd_write_zeroes(rbd_image_t, uint64_t, uint64_t, int, int)’
CEPH_RBD_API ssize_t rbd_write_zeroes(rbd_image_t image, uint64_t ofs,
h3. ^~~~~~~~~~~~~~

Should len be uint64_t or size_t?

src/include/rbd/librbd.h
CEPH_RBD_API ssize_t rbd_write_zeroes(rbd_image_t image, uint64_t ofs,
uint64_t len, int zero_flags,
int op_flags);

src/librbd/librbd.cc
extern "C" ssize_t rbd_write_zeroes(rbd_image_t image, uint64_t ofs, size_t len,
int zero_flags, int op_flags)


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #47022: octopus: rbd_write_zeroes()ResolvedNathan CutlerActions
Copied to Ceph - Backport #47023: nautilus: rbd_write_zeroes()ResolvedNathan CutlerActions
Actions #1

Updated by Corey Bryant over 3 years ago

Note, build fails on i386. PR: https://github.com/ceph/ceph/pull/36620

Actions #2

Updated by Jason Dillaman over 3 years ago

  • Backport set to nautilus,octopus
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 36688
Actions #4

Updated by Jason Dillaman over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 3 years ago

Actions #6

Updated by Nathan Cutler over 3 years ago

Actions #7

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF